k8s/microdms/microdms-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microdms-app-ingress
  namespace: microdms
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microdms-app.microdms.k8s-test.perit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microdms-app
                port:
                  name: http
  tls:
    - hosts:
        - microdms-app.microdms.k8s-test.perit.local
      secretName: kubernetes-dashboard-certs
